<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">
    <data>
        <import type="android.view.View" />
        <variable name="viewModel" type="com.huebeiro.kotlintictactoe.viewmodel.GameViewModel" />
    </data>
    <LinearLayout
        android:id="@+id/tictactoe"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        tools:context="com.huebeiro.kotlintictactoe.view.GameActivity">

        <GridLayout
            android:id="@+id/buttonGrid"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:columnCount="3"
            android:rowCount="3">

            <Button
                android:id="@+id/button00"
                style="@style/tictactoebutton"
                android:onClick="@{() -> viewModel.onClickedCellAt(0,0)}"
                android:text='@{viewModel.cells["00"]}' />

            <Button
                android:id="@+id/button01"
                style="@style/tictactoebutton"
                android:onClick="@{() -> viewModel.onClickedCellAt(0,1)}"
                android:text='@{viewModel.cells["01"]}' />

            <Button
                android:id="@+id/button02"
                style="@style/tictactoebutton"
                android:onClick="@{() -> viewModel.onClickedCellAt(0,2)}"
                android:text='@{viewModel.cells["02"]}' />

            <Button
                android:id="@+id/button10"
                style="@style/tictactoebutton"
                android:onClick="@{() -> viewModel.onClickedCellAt(1,0)}"
                android:text='@{viewModel.cells["10"]}' />

            <Button
                android:id="@+id/button11"
                style="@style/tictactoebutton"
                android:onClick="@{() -> viewModel.onClickedCellAt(1,1)}"
                android:text='@{viewModel.cells["11"]}' />

            <Button
                android:id="@+id/button12"
                style="@style/tictactoebutton"
                android:onClick="@{() -> viewModel.onClickedCellAt(1,2)}"
                android:text='@{viewModel.cells["12"]}' />

            <Button
                android:id="@+id/button20"
                style="@style/tictactoebutton"
                android:onClick="@{() -> viewModel.onClickedCellAt(2,0)}"
                android:text='@{viewModel.cells["20"]}' />

            <Button
                android:id="@+id/button21"
                style="@style/tictactoebutton"
                android:onClick="@{() -> viewModel.onClickedCellAt(2,1)}"
                android:text='@{viewModel.cells["21"]}' />

            <Button
                android:id="@+id/button22"
                style="@style/tictactoebutton"
                android:onClick="@{() -> viewModel.onClickedCellAt(2,2)}"
                android:text='@{viewModel.cells["22"]}' />

        </GridLayout>

        <LinearLayout
            android:id="@+id/winnerPlayerViewGroup"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical"
            android:visibility="@{viewModel.winner != null ? View.VISIBLE : View.GONE}"
            tools:visibility="visible">

            <TextView
                android:id="@+id/winnerPlayerLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:textSize="40sp"
                android:text="@{viewModel.winner}"
                tools:text="X" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/winner"
                android:textSize="30sp" />

        </LinearLayout>

    </LinearLayout>
</layout>
